fix(services): center subtitle alignment

--- a/src/app/components/services/services.scss
+++ b/src/app/components/services/services.scss
@@ -7,15 +7,15 @@
 }
 
 .services-content {
-    @include flex-layout(column, flex-start, flex-start, v.$f-gap-sm);
+    @include flex-layout(column, flex-start, center, v.$f-gap-sm);
     width: 100%;
     .title {
         @include text-style(v.$f-size-huge, v.$f-weight-bold, v.$color-accent, 0);
-        width: 100%;
         text-align: center;
     }
     .subtitle {
         @include text-style(v.$f-size-large, v.$f-weight-medium, v.$color-muted, 0);
+        text-align: center;
     }
 }
 
@@ -27,6 +27,7 @@
 
 .services-activity {
     width: 90%;
+    cursor: pointer;
 }
 
 .services-activity-card {
@@ -46,7 +47,7 @@
     }
     
     &:hover {
-        transform: translateY(-8px);
+        transform: scale(1.03);
         box-shadow: v.$f-shadow-strong;
         
         fa-icon {
